compile-direct/tests/failing/1-bytes-is-not-str/main.af
str: @str
bytes: @bytes

consume: (str) {
    @exit(0)
}

main: () {
    @file_read("unused", @exit(1), (value: bytes) {
        consume(value)
    })
}
